# functionalprogramming

./: .gitignore  .stylish-haskell.yaml  HW1.hs  README.md  stack.yaml
hw1/: README.md  hw1.cabal
hw1/src/: Lib.hs
hw1/test/: TestSpec.hs
hw2/: LICENSE  README.md  hw2.cabal
hw2/src/: Lib2.hs  proofs.txt
hw2/src/ChaoticNice/: Inctances.hs
hw2/src/MonadInstances/: FromMonad.hs  FromMonadFish.hs  FromMonadJoin.hs
hw2/test/: TestSpec.hs
hw3/: README.md  fact.txt  fib.txt  hw3.cabal
hw3/src/: Lib3.hs
hw3/test/: TestSpec.hs
hw4/: LICENSE  README.md  hw4.cabal
hw4/src/: Lib4.hs  Main.hs
hw4/test/: TestSpec.hs
