name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/fmixing/functionalprogramming
license:             MIT
license-file:        LICENSE
author:              Alice Koroleva
maintainer:          alicekoroleva239@gmail.com
copyright:           2017 Alice Koroleva

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, random >= 1.1
  default-language:    Haskell2010

Test-Suite spec
  Type:               exitcode-stdio-1.0
  Main-Is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.9 && < 5, random >= 1.1, hspec, QuickCheck, hw1
  default-language:   Haskell2010
