name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://github.com/fmixing/functionalprogramming
license:             MIT
license-file:        LICENSE
author:              Alice Koroleva
maintainer:          alicekoroleva239@gmail.com
copyright:           2017 Alice Koroleva

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Main
  ghc-options:         -Wall, -XTemplateHaskell
  build-depends:       base >= 4.9 && < 5, 
                       random >= 1.1, 
                       containers, 
                       transformers,
                       mtl,
                       MissingH,
                       megaparsec,
                       text,
                       template-haskell
  default-language:    Haskell2010

Test-Suite spec
  Type:               exitcode-stdio-1.0
  Main-Is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.9 && < 5, 
                      random >= 1.1, hspec, 
                      QuickCheck, 
                      containers,
                      mtl,
                      hw3,
                      megaparsec >= 6.2.0,
                      text
  default-language:   Haskell2010